[gd_scene load_steps=6 format=3 uid="uid://dvindvvsd004d"]

[ext_resource type="Script" uid="uid://c6lheu2fnkx3f" path="res://Autoload/OrquestradorDeFases/OrquestradorDeFases.gd" id="1_qg52u"]
[ext_resource type="PackedScene" uid="uid://c64uyuc4x5fv7" path="res://Cenas/UI/GameUI/GameUI.tscn" id="2_fukb8"]
[ext_resource type="AudioStream" uid="uid://delxrl3qouu8x" path="res://assets/Music/Crescendo2.ogg" id="2_wcp3x"]
[ext_resource type="AudioStream" uid="uid://cjaucuuw5qfcl" path="res://assets/Music/A well earned victory.ogg" id="3_1m4ts"]
[ext_resource type="PackedScene" uid="uid://bex1hun4ku3l" path="res://Autoload/TelaPosFase/TelaPosFase.tscn" id="3_ps0m6"]

[node name="OrquestradorDeFases" type="Node"]
script = ExtResource("1_qg52u")
musica_da_fase = ExtResource("2_wcp3x")
musica_vitoria = ExtResource("3_1m4ts")

[node name="GameUI" parent="." instance=ExtResource("2_fukb8")]

[node name="TelaPosFase" parent="." instance=ExtResource("3_ps0m6")]
unique_name_in_owner = true

[connection signal="ir_para_a_proxima_fase" from="TelaPosFase" to="." method="_ir_para_a_proxima_fase"]
[connection signal="pedido_para_resetar_fase" from="TelaPosFase" to="." method="_pedido_para_resetar_fase"]
[connection signal="pediu_para_sair_do_jogo" from="TelaPosFase" to="." method="_pediu_para_sair_do_jogo"]
